--- a/assignment4-todo_list_manager/src/App.css
+++ b/assignment4-todo_list_manager/src/App.css
@@ -1,38 +1,151 @@
-.App {
-  text-align: center;
+/* reset css */
+* {
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  box-sizing: border-box;
+  outline: none !important;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  line-height: 1.5;
+  font-family: sans-serif;
+  font-size: 14px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+img {
+  max-width: 100%;
+  height: auto;
+  vertical-align: middle;
 }
 
-.App-header {
-  background-color: #282c34;
+section,
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+p,
+ul,
+li {
+  margin: 0;
+  padding: 0;
+  font-weight: normal;
+}
+
+*:hover {
+  transition: all 0.3s;
+}
+.wmg-container {
+  padding: 30px;
+  max-width: 1360px;
+  margin: 0 auto;
+  position: relative;
   min-height: 100vh;
+  background-image: url(./img/todoBackgroundImage.jpg);
+}
+
+.list-wrapper {
+  border-radius: 20px;
+  padding: 40px;
+  width: 80%;
+  margin: 0 auto;
+  background-color: #fff;
+}
+.header-image img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 300px;
+  border-radius: 20px;
+  margin: 0 auto;
+}
+.heading-text h1 {
+  margin: 10px 0;
+  text-align: center;
+  font-weight: 800;
+  background-image: url(./img/todoBackgroundImage.jpg);
+  background-repeat: repeat;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 26px;
+  line-height: 1.2;
+  letter-spacing: 1px;
+}
+
+.todo-form {
+  display: flex;
+  justify-content: center;
+}
+.todo-form input {
+  font-size: 16px;
+  width: 300px;
+  padding: 10px;
+  border: none;
+  border: 2px solid gray;
+  border-radius: 6px;
+}
+.todo-form input:active {
+  background-color: aqua;
+}
+.form-btn {
+  margin: 0 20px;
+  width: 80px;
+  padding: 10px;
+  border: none;
+  border: 2px solid gray;
+  border-radius: 6px;
+}
+.list-container {
   display: flex;
   flex-direction: column;
+}
+.list-item {
+  margin-top: 10px;
+  padding: 5px 20px;
+  display: flex;
+  justify-content: space-between;
   align-items: center;
+  border-radius: 10px;
+  background-image: linear-gradient(to right, green, yellow);
+}
+.listItem-text {
+  font-size: 24px;
+  color: #fff;
+  font-weight: 600;
+}
+.listItem-date {
+  font-size: 18px;
+  color: rgb(194, 194, 194);
+}
+.list-item svg {
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  margin: 0 10px;
+  opacity: 0.7;
+}
+.list-item svg:hover {
+  scale: 1.05;
+  opacity: 1;
+  background-color: transparent;
+}
+.delete-btn {
+  color: red;
+}
+.edit-btn {
+  color: green;
+}
+.delete-all {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.delete-all-btn {
+  margin: 20px 20px 0;
+  min-width: 100px;
+  padding: 10px;
+  border: none;
+  border: 2px solid gray;
+  border-radius: 6px;
 }
