--- a/assignment4-todo_list_manager/src/App.css
+++ b/assignment4-todo_list_manager/src/App.css
@@ -47,6 +47,7 @@ li {
 }
 
 .list-wrapper {
+  position: relative;
   border-radius: 20px;
   padding: 40px;
   width: 80%;
@@ -96,6 +97,14 @@ li {
   border: none;
   border: 2px solid gray;
   border-radius: 6px;
+  color: #fff;
+  font-weight: 700;
+}
+.add-item-btn {
+  background-color: orange;
+}
+.edit-item-btn {
+  background-color: green;
 }
 .list-container {
   display: flex;
@@ -148,4 +157,29 @@ li {
   border: none;
   border: 2px solid gray;
   border-radius: 6px;
+  background-color: #ff007b;
+}
+.dynamic-btns {
+  width: 100%;
+  position: absolute;
+  display: flex;
+  justify-content: space-between;
+  top: 100px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.dynamic-btns button {
+  display: block;
+  font-size: 14px;
+  font-weight: 700;
+  min-width: 80px;
+  padding: 8px;
+  border: none;
+  border: 1px solid gray;
+  border-radius: 6px;
+  color: #fff;
+  background-image: url(./img/todoBackgroundImage.jpg);
+}
+.dynamic-btns button:hover {
+  background-image: url(./img/headerImage.jpg);
 }
