--- a/assignment4-todo_list_manager/src/App.css
+++ b/assignment4-todo_list_manager/src/App.css
@@ -119,19 +119,24 @@ li {
   border-radius: 10px;
   background-image: linear-gradient(to right, green, yellow);
 }
+.list-item div {
+  display: flex;
+  align-items: center;
+}
 .listItem-text {
   font-size: 24px;
   color: #fff;
   font-weight: 600;
 }
 .listItem-date {
-  font-size: 18px;
+  font-size: 14px;
   color: rgb(194, 194, 194);
+  padding-left: 20px;
 }
 .list-item svg {
   display: inline-block;
-  width: 40px;
-  height: 40px;
+  width: 25px;
+  height: 25px;
   margin: 0 10px;
   opacity: 0.7;
 }
