--- a/assignment2-weather_dashboard/src/components/dashboardStyle.css
+++ b/assignment2-weather_dashboard/src/components/dashboardStyle.css
@@ -56,6 +56,7 @@
   display: grid;
   grid-template-columns: repeat(3, 300px);
   justify-content: space-evenly;
+  grid-gap: 20px;
 }
 .card {
   padding: 30px;
@@ -84,6 +85,10 @@
 .icon-image {
   width: 60px;
   height: 60px;
+}
+.icon-image img {
+  width: 100%;
+  height: 100%;
 }
 .icon-text {
   text-align: center;
@@ -126,5 +131,6 @@
 .dynamic-btn {
   position: fixed;
   right: 20px;
+  top: 90vh;
   margin-top: -50px;
 }
