--- a/assignment1-shopping_app/src/components/home.css
+++ b/assignment1-shopping_app/src/components/home.css
@@ -72,10 +72,21 @@
   height: 30px;
   color: #fff;
 }
+.page-data {
+  display: flex;
+}
+.all-items {
+  width: 70%;
+}
+.cart-items {
+  padding: 10px;
+  width: 30%;
+  background-color: antiquewhite;
+}
 .item-grid {
   margin: 30px 20px;
   display: grid;
-  grid-template-columns: repeat(4, 250px);
+  grid-template-columns: repeat(3, 250px);
   justify-content: space-between;
   grid-gap: 20px;
 }
@@ -151,6 +162,23 @@
 }
 .card-image-list img {
   border-radius: 10px;
+  width: 100%;
+  height: 100%;
+}
+
+/* cart-item */
+.cart-item {
+  margin-bottom: 10px;
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+  border-bottom: 2px solid;
+}
+.cart-item-image {
+  width: 100px;
+  height: 100px;
+}
+.cart-item-image img {
   width: 100%;
   height: 100%;
 }
