--- a/assignment1-shopping_app/src/components/home.css
+++ b/assignment1-shopping_app/src/components/home.css
@@ -182,6 +182,11 @@
   width: 100%;
   height: 100%;
 }
+.delete-card-item svg {
+  width: 30px;
+  height: 30px;
+  color: #ff0000;
+}
 
 @media screen and (max-width: 1200px) {
   .item-grid {
